bug-1: add meta tags to the index.html

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pet project for developing a React interface, which will allow to construct logical proofs and calculate other logical stuff. "
+    />
+    <meta name="author" content="Dmitrii Suroviagin" />
+    <meta name="keywords" content="logic, proofs, react, typescript" />
     <link rel="icon" href="./favicon.ico" />
     <title>Chop Logic</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
