--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <span
+      >Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur voluptatum error fugit aliquam ducimus blanditiis labore,
+      voluptas cupiditate magnam. Eos, eaque. Blanditiis tempore eveniet illo quasi numquam ipsam praesentium?</span
+    >
     <div id="root"></div>
   </body>
 </html>
