bug-13: add manifest.json and public files

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     />
     <meta name="author" content="Dmitrii Suroviagin" />
     <meta name="keywords" content="logic, proofs, react, typescript" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
     <title>Chop Logic</title>
   </head>
   <body>
