--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta name="keywords" content="logic, proofs, react, typescript" />
     <link rel="icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
+    <!-- react-latex dependency -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0/katex.min.css" rel="stylesheet" />
     <title>Chop Logic</title>
   </head>
   <body>
